docs: CHANGELOG + workspace coherence sweep (post-review-orchestrator)
Adds an "Unreleased (post-review-orchestrator)" CHANGELOG section
covering the 50+ orchestrator commits across security, soundness,
correctness, and OSS / distribution.

Pulls README / ARCHITECTURE / BUILD_GUIDE / CONTRIBUTING / SECURITY
/ docs/INSTALL / docs/CONFIG from dev so the worktree picks up the
MSRV-1.77 sync, crate-count realignment (17 workspace + fuzz = 18),
JCA crypto status, and per-binary `cratonvm` rename. Refines the
"out-of-workspace" wording to reflect fuzz/ now being a workspace
member; adds fuzz/ to the BUILD_GUIDE Project Structure tree.

Removes 8 stale TODO(orchestrator) markers in native-builtins/src/
{activemq,felix,flink,grpc,hazelcast,hbase,ignite,spark}_extras.rs
— each pointed at a "wire register_*_stubs() into lib.rs" follow-up
that has since been wired (native-builtins/src/lib.rs:1498-1513).

No code changes; comments-only on the extras files. No cargo
invoked. Scope ~210 LOC.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>